# skills-hub

./: .gitignore  README.en.md  README.md
skills/01000001-01001110/jira-safe/: SKILL.md  skill-report.json
skills/01000001-01001110/jira-workflow/: skill-report.json
skills/0918nobita/chinese-learning-assistant/: SKILL.md  skill-report.json
skills/0chan-smc/frontend-dev-guidelines/: SKILL.md  skill-report.json
skills/0chan-smc/skill-developer/: SKILL.md  skill-report.json
skills/0tarof/create-pr/: SKILL.md  skill-report.json
skills/0x6a77/create-svg-from-prompt/: SKILL.md  skill-report.json
skills/0x8506/vibe-security/: SKILL.md  skill-report.json
skills/0xbigboss/axe-ios-simulator/: skill-report.json
skills/0xbigboss/canton-network-repos/: SKILL.md  skill-report.json
skills/0xbigboss/extract-transcripts/: SKILL.md  skill-report.json  transcript_index.py
skills/0xbigboss/gen-env/: ADVANCED_PATTERNS.md  IMPLEMENTATION.md  SKILL.md  skill-report.json
skills/0xbigboss/linear/: QA.md  SKILL.md  graphql-recipes.md  skill-report.json  troubleshooting.md
skills/0xbigboss/playwright-best-practices/: skill-report.json
skills/0xbigboss/python-best-practices/: skill-report.json
skills/0xbigboss/react-best-practices/: skill-report.json
skills/0xbigboss/tamagui-best-practices/: skill-report.json
skills/0xbigboss/tilt/: SKILL.md  skill-report.json
skills/0xbigboss/tmux-processes/: SKILL.md  skill-report.json
skills/0xbigboss/typescript-best-practices/: skill-report.json
skills/0xbigboss/web-fetch/: SKILL.md  skill-report.json
skills/0xbigboss/zig-best-practices/: skill-report.json
skills/0xbigboss/zig-docs/: SKILL.md  skill-report.json
skills/0xdarkmatter/claude-code-debug/: SKILL.md  skill-report.json
skills/0xdarkmatter/claude-code-headless/: SKILL.md  skill-report.json
skills/0xdarkmatter/claude-code-hooks/: SKILL.md  skill-report.json
skills/0xdarkmatter/claude-code-templates/: SKILL.md  skill-report.json
skills/0xdarkmatter/code-stats/: SKILL.md  skill-report.json
skills/0xdarkmatter/container-orchestration/: SKILL.md  skill-report.json
skills/0xdarkmatter/data-processing/: SKILL.md  skill-report.json
skills/0xdarkmatter/doc-scanner/: SKILL.md  skill-report.json
skills/0xdarkmatter/file-search/: skill-report.json
skills/0xdarkmatter/find-replace/: skill-report.json
skills/0xdarkmatter/git-workflow/: SKILL.md  skill-report.json
skills/0xdarkmatter/mcp-patterns/: SKILL.md  skill-report.json
skills/0xdarkmatter/project-planner/: SKILL.md  skill-report.json
skills/0xdarkmatter/python-async-patterns/: SKILL.md  skill-report.json
skills/0xdarkmatter/python-cli-patterns/: SKILL.md  skill-report.json
skills/0xdarkmatter/python-database-patterns/: SKILL.md  skill-report.json
skills/0xdarkmatter/python-env/: skill-report.json
skills/0xdarkmatter/python-fastapi-patterns/: SKILL.md  skill-report.json
skills/0xdarkmatter/python-observability-patterns/: SKILL.md  skill-report.json
skills/0xdarkmatter/python-pytest-patterns/: SKILL.md  (+1 more)
skills/autumnsgrove/env-config/examples/: pyproject.toml  secrets_template.json
skills/bellybook/genesis/templates/backend-python/: local-run.sh  pyproject.toml
skills/bellybook/genesis/templates/backend-python/app/: __init__.py  config.py  main.py
skills/bellybook/genesis/templates/backend-python/app/db/: __init__.py  session.py
skills/bellybook/genesis/templates/backend-python/app/models/: __init__.py
skills/bellybook/genesis/templates/backend-python/app/router/: __init__.py  login.py  user.py
skills/bellybook/genesis/templates/backend-python/app/schemas/: __init__.py  base_resp.py
skills/bellybook/genesis/templates/backend-python/app/utils/: __init__.py  log.py
skills/brand-guidelines/: skill-report.json
skills/canvas-design/: skill-report.json
skills/chipflow/context-tools/: CHANGELOG.md  LICENSE  PROCESS-ARCHITECTURE.md  README.md  SKILL.md  TESTING.md  TODO.md  pyproject.toml  skill-report.json
skills/chipflow/context-tools/commands/: clash-summary.md  debug.md  learnings.md  manifest.md  mcp-help.md  repo-map.md  resolve-clashes.md  setup-mcp.md  status.md
skills/chipflow/context-tools/docs/: FTS_DESIGN.md
skills/chipflow/context-tools/hooks/: hooks.json
skills/chipflow/context-tools/scripts/: analyze-memory.py  check-cache.sh  generate-manifest.py  generate-repo-map.py  on-exit.sh  precompact.sh  session-start.sh
skills/chipflow/context-tools/servers/: repo-map-server.py
skills/chipflow/context-tools/templates/: learnings.md
skills/chipflow/context-tools/tests/: TEST_RESULTS.md  test_list_files.py  test_mcp_tools.py
skills/chipflow/context-tools/tests/test_codebase/: device.py  instructions.py  utils.py
skills/claude-opus-4-5-migration/: skill-report.json
skills/doc-coauthoring/: skill-report.json
skills/docx/: skill-report.json
skills/frontend-design/: skill-report.json
skills/internal-comms/: skill-report.json
skills/mcp-builder/: skill-report.json
skills/pdf/: skill-report.json
skills/pptx/: skill-report.json
skills/slack-gif-creator/: skill-report.json
skills/template-skill/: skill-report.json
skills/webapp-testing/: skill-report.json
skills/xlsx/: skill-report.json
(+7774 files in other folders)
