[project]
name = "claude-context-tools"
version = "0.6.1"
description = "Context management tools for Claude Code: project manifest, repo map with duplicate detection, and learnings system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]

[tool.uv]
# This is a script collection, not an installable package
package = false
